# Screencast-Refiner-v2

./: .env.example  .gitignore  README.md  pyproject.toml  run_orchestrator.py
src/: orchestrator.py
src/common/: static.py
src/common/decorators/: step_tracker.py
src/common/services/: content_generation_manager.py  media_manager.py  transcription_manager.py  voice_generation_manager.py
src/common/utils/: json_utils.py
src/db/: mongo_client.py  mongo_utils.py
src/steps/: step_10_00_preprocess_video.py  step_20_00_fetch_transcription.py  step_20_00_transcribe_video.py  step_30_00_make_scenes.py  step_40_00_extract_clips.py  step_50_00_generate_audio.py  step_60_00_add_voiceover.py  step_70_00_assemble_video.py
