[tool.poetry]
name = "proscreener-ai"
version = "0.1.0"
description = ""
authors = ["Bishwaraj <bishwaraj@thworks.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
uuid = "^1.30"
pytz = "^2024.2"
python-dotenv = "^1.0.1"
moviepy = "^1.0.3"
rev-ai = "^2.19.5"
google-generativeai = "^0.8.3"
openai = "^1.52.0"
motor = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"